[package]
name = "streamdeck-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
obws = "0.10.0"
#streamdeck = "0.7.0"
streamdeck = { path = "../rust-streamdeck" }
tokio = { version = "1.26.0", features = ["full"] }
